# HW_19

./: pyproject.toml
hw_19/utils/: attach.py
tests/android_app/: conftest.py  test_click_article.py  test_wikipedia_example.py
